Add tslint-config-prettier and prettier

--- a/package.json
+++ b/package.json
@@ -39,8 +39,10 @@
     "html-webpack-plugin": "3.2.0",
     "jest": "23.6.0",
     "metro-react-native-babel-preset": "0.51.1",
+    "prettier": "^1.16.1",
     "rnpm-plugin-windows": "0.2.8",
     "tslint": "5.12.0",
+    "tslint-config-prettier": "^1.17.0",
     "tslint-react": "3.6.0",
     "typescript": "3.2.2",
     "webpack": "4.28.2",
