--- a/windows/RadioStreamPlayerRN/RadioStreamPlayerRN.csproj
+++ b/windows/RadioStreamPlayerRN/RadioStreamPlayerRN.csproj
@@ -208,6 +208,10 @@
     </ApplicationDefinition>
   </ItemGroup>
   <ItemGroup>
+    <ProjectReference Include="..\../\node_modules\react-native-video\windows\ReactNativeVideo.Net46\ReactNativeVideo.Net46.csproj">
+      <Project>{2D8406AB-0674-42D3-8FE3-41D251403DF8}</Project>
+      <Name>ReactNativeVideo.Net46</Name>
+    </ProjectReference>
     <ProjectReference Include="..\..\node_modules\react-native-windows\ReactWindows\ReactNative\ReactNative.csproj">
       <Project>{c7673ad5-e3aa-468c-a5fd-fa38154e205c}</Project>
       <Name>ReactNative</Name>
