--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "@types/enzyme": "3.1.15",
     "@types/jest": "23.3.10",
     "@types/react": "16.4.18",
+    "@types/react-native-vector-icons": "^4.6.4",
     "@types/react-native-video": "^3.1.0",
     "babel-core": "7.0.0-bridge.0",
     "babel-jest": "23.6.0",
@@ -54,6 +55,7 @@
     "react": "16.6.3",
     "react-dom": "16.6.3",
     "react-native": "0.57.8",
+    "react-native-vector-icons": "^6.2.0",
     "react-native-video": "^4.3.1",
     "react-native-windows": "0.57.0-rc.0",
     "reactxp": "1.5.0"
