--- a/tsconfig.json
+++ b/tsconfig.json
@@ -21,7 +21,8 @@
     "module": "es2015",
     "target": "es2015",
     "jsx": "react",
-    "lib": ["es5", "es2015", "dom"]
+    "lib": ["es5", "es2015", "dom"],
+    "resolveJsonModule": true
   },
 
   "include": ["src/**/*"],
