--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "@types/react": "16.4.18",
     "@types/react-native-vector-icons": "^4.6.4",
     "@types/react-native-video": "^3.1.0",
+    "@types/react-navigation": "^3.0.7",
     "babel-core": "7.0.0-bridge.0",
     "babel-jest": "23.6.0",
     "babel-loader": "8.0.4",
@@ -55,9 +56,11 @@
     "react": "16.6.3",
     "react-dom": "16.6.3",
     "react-native": "0.57.8",
+    "react-native-gesture-handler": "^1.2.1",
     "react-native-vector-icons": "^6.2.0",
     "react-native-video": "^4.3.1",
     "react-native-windows": "0.57.0-rc.0",
+    "react-navigation": "^3.9.1",
     "reactxp": "1.5.0"
   }
 }
