--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@babel/core": "7.2.2",
     "@babel/plugin-proposal-decorators": "7.2.3",
     "@babel/preset-env": "7.2.3",
+    "@types/cheerio": "^0.22.11",
     "@types/enzyme": "3.1.15",
     "@types/jest": "23.3.10",
     "@types/react": "16.4.18",
@@ -53,6 +54,7 @@
     "webpack-merge": "4.1.5"
   },
   "dependencies": {
+    "cheerio": "0.22.0",
     "react": "16.6.3",
     "react-dom": "16.6.3",
     "react-native": "0.57.8",
