--- a/src/radio.config.json
+++ b/src/radio.config.json
@@ -2,5 +2,6 @@
   "radioName": "My Radio",
   "radioUrl": "http://relay.publicdomainproject.org:80/classical.mp3",
   "dataUrl": "http://centova.example.com:8080/external/rpc.php",
+  "articlesUrl": "https://myradio.com/blog/",
   "ignoreTracksContaining": ["call-sign", "key-signature"]
 }
