--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "main": "index.js",
   "version": "0.0.1",
   "scripts": {
-    "rn-cli": "node node_modules/react-native/local-cli/cli.js",
+    "rn-cli": "node scripts/react-native.js",
     "start:android": "yarn rn-cli run-android",
     "start:windows": "yarn rn-cli run-windows",
     "start:ios": "yarn rn-cli run-ios",
@@ -15,54 +15,57 @@
     "test:watch": "yarn test --watch",
     "test:debug": "node --inspect-brk node_modules/.bin/jest -c jest/jest.config.js --runInBand",
     "build:types": "tsc --emitDeclarationOnly",
-    "lint": "tslint -p tsconfig.json -r tslint.json",
     "type-check": "tsc --noEmit",
-    "type-check:watch": "yarn type-check -w"
+    "type-check:watch": "yarn type-check -w",
+    "lint": "eslint --config .eslintrc --ext .ts,.tsx src"
   },
   "devDependencies": {
-    "@babel/core": "7.2.2",
-    "@babel/plugin-proposal-decorators": "7.2.3",
-    "@babel/preset-env": "7.2.3",
+    "@babel/core": "7.6.3",
+    "@babel/plugin-proposal-decorators": "7.6.0",
+    "@babel/preset-env": "7.6.3",
+    "@react-native-community/cli": "1.10.0",
     "@types/cheerio": "^0.22.11",
-    "@types/enzyme": "3.1.15",
-    "@types/jest": "23.3.10",
-    "@types/react": "16.4.18",
-    "@types/react-native-vector-icons": "^4.6.4",
-    "@types/react-native-video": "^3.1.0",
-    "@types/react-navigation": "^3.0.7",
-    "babel-core": "7.0.0-bridge.0",
-    "babel-jest": "23.6.0",
-    "babel-loader": "8.0.4",
-    "compression-webpack-plugin": "2.0.0",
-    "cross-env": "5.2.0",
-    "enzyme": "3.8.0",
-    "enzyme-adapter-react-16": "1.7.1",
-    "enzyme-to-json": "3.3.5",
-    "fork-ts-checker-webpack-plugin": "0.5.2",
+    "@types/enzyme": "3.10.3",
+    "@types/jest": "24.0.18",
+    "@types/react-native-vector-icons": "^6.4.4",
+    "@types/react-native-video": "^3.1.5",
+    "@types/react-navigation": "^3.0.8",
+    "@typescript-eslint/eslint-plugin": "2.3.3",
+    "@typescript-eslint/parser": "2.3.3",
+    "babel-loader": "8.0.6",
+    "compression-webpack-plugin": "3.0.0",
+    "cross-env": "6.0.3",
+    "enzyme": "3.10.0",
+    "enzyme-adapter-react-16": "1.15.0",
+    "enzyme-to-json": "3.4.2",
+    "eslint": "6.5.1",
+    "eslint-loader": "3.0.2",
+    "eslint-plugin-jest": "22.17.0",
+    "eslint-plugin-react": "7.16.0",
+    "fork-ts-checker-webpack-plugin": "1.5.0",
     "html-webpack-plugin": "3.2.0",
-    "jest": "23.6.0",
-    "metro-react-native-babel-preset": "0.51.1",
-    "prettier": "^1.16.1",
-    "rnpm-plugin-windows": "0.2.8",
-    "tslint": "5.12.0",
-    "tslint-config-prettier": "^1.17.0",
-    "tslint-react": "3.6.0",
-    "typescript": "3.2.2",
-    "webpack": "4.28.2",
-    "webpack-cli": "3.1.2",
-    "webpack-dev-server": "3.1.14",
-    "webpack-merge": "4.1.5"
+    "jest": "24.9.0",
+    "metro-react-native-babel-preset": "0.56.0",
+    "rnpm-plugin-windows": "0.3.5",
+    "typescript": "3.6.4",
+    "webpack": "4.41.0",
+    "webpack-cli": "3.3.9",
+    "webpack-dev-server": "3.8.2",
+    "webpack-merge": "4.2.2"
   },
   "dependencies": {
     "cheerio": "0.22.0",
-    "react": "16.6.3",
-    "react-dom": "16.6.3",
-    "react-native": "0.57.8",
-    "react-native-gesture-handler": "^1.2.1",
-    "react-native-vector-icons": "^6.2.0",
-    "react-native-video": "^4.3.1",
-    "react-native-windows": "0.57.0-rc.0",
-    "react-navigation": "^3.9.1",
-    "reactxp": "1.5.0"
+    "react": "16.10.2",
+    "react-dom": "16.10.2",
+    "react-native": "0.59.10",
+    "react-native-gesture-handler": "^1.4.1",
+    "react-native-reanimated": "^1.3.0",
+    "react-native-screens": "^1.0.0-alpha.23",
+    "react-native-vector-icons": "^6.6.0",
+    "react-native-video": "^5.0.2",
+    "react-native-windows": "0.59.0-rc.3",
+    "react-navigation": "^4.0.10",
+    "react-navigation-tabs": "^2.5.6",
+    "reactxp": "2.0.0-rc.1"
   }
 }
