--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -141,6 +141,7 @@ android {
 }
 
 dependencies {
+    implementation project(':react-native-music-control')
     implementation project(':react-native-reanimated')
     implementation project(':react-native-screens')
     implementation project(':react-native-gesture-handler')
