--- a/.eslintrc
+++ b/.eslintrc
@@ -7,12 +7,18 @@
     "sourceType": "module",
     "project": "./tsconfig.json"
   },
-  "plugins": ["@typescript-eslint", "react", "jest"],
+  "plugins": [
+    "@typescript-eslint",
+    "react",
+    "reactxp",
+    "jest"
+  ],
   "extends": [
     "eslint:recommended",
     "plugin:@typescript-eslint/eslint-recommended",
     "plugin:@typescript-eslint/recommended",
     "plugin:@typescript-eslint/recommended-requiring-type-checking",
+    "plugin:reactxp/recommended",
     "plugin:react/recommended",
     "plugin:jest/recommended"
   ],
