--- a/package.json
+++ b/package.json
@@ -20,53 +20,54 @@
     "lint": "eslint --config .eslintrc --ext .ts,.tsx src"
   },
   "devDependencies": {
-    "@babel/core": "7.6.3",
-    "@babel/plugin-proposal-decorators": "7.6.0",
-    "@babel/preset-env": "7.6.3",
-    "@react-native-community/cli": "1.10.0",
-    "@types/cheerio": "^0.22.11",
+    "@babel/core": "7.7.4",
+    "@babel/plugin-proposal-decorators": "7.7.4",
+    "@babel/preset-env": "7.7.4",
+    "@react-native-community/cli": "1.11.2",
+    "@types/cheerio": "^0.22.14",
     "@types/enzyme": "3.10.3",
-    "@types/jest": "24.0.18",
+    "@types/jest": "24.0.23",
     "@types/react-native-vector-icons": "^6.4.4",
     "@types/react-native-video": "^3.1.5",
-    "@types/react-navigation": "^3.0.8",
-    "@typescript-eslint/eslint-plugin": "2.3.3",
-    "@typescript-eslint/parser": "2.3.3",
+    "@types/react-navigation": "^3.4.0",
+    "@typescript-eslint/eslint-plugin": "2.8.0",
+    "@typescript-eslint/parser": "2.8.0",
     "babel-loader": "8.0.6",
     "compression-webpack-plugin": "3.0.0",
     "cross-env": "6.0.3",
     "enzyme": "3.10.0",
-    "enzyme-adapter-react-16": "1.15.0",
-    "enzyme-to-json": "3.4.2",
-    "eslint": "6.5.1",
+    "enzyme-adapter-react-16": "1.15.1",
+    "enzyme-to-json": "3.4.3",
+    "eslint": "6.7.0",
     "eslint-loader": "3.0.2",
-    "eslint-plugin-jest": "22.17.0",
+    "eslint-plugin-jest": "23.0.4",
     "eslint-plugin-react": "7.16.0",
-    "fork-ts-checker-webpack-plugin": "1.5.0",
+    "eslint-plugin-reactxp": "0.1.7",
+    "fork-ts-checker-webpack-plugin": "3.1.0",
     "html-webpack-plugin": "3.2.0",
     "jest": "24.9.0",
-    "metro-react-native-babel-preset": "0.56.0",
-    "rnpm-plugin-windows": "0.3.5",
-    "typescript": "3.6.4",
-    "webpack": "4.41.0",
-    "webpack-cli": "3.3.9",
-    "webpack-dev-server": "3.8.2",
+    "metro-react-native-babel-preset": "0.57.0",
+    "rnpm-plugin-windows": "0.3.8",
+    "typescript": "3.7.2",
+    "webpack": "4.41.2",
+    "webpack-cli": "3.3.10",
+    "webpack-dev-server": "3.9.0",
     "webpack-merge": "4.2.2"
   },
   "dependencies": {
     "cheerio": "0.22.0",
-    "react": "16.10.2",
-    "react-dom": "16.10.2",
+    "react": "16.12.0",
+    "react-dom": "16.12.0",
     "react-native": "0.59.10",
-    "react-native-gesture-handler": "^1.4.1",
+    "react-native-gesture-handler": "~1.4.0",
     "react-native-music-control": "^0.10.7",
-    "react-native-reanimated": "^1.3.0",
+    "react-native-reanimated": "^1.4.0",
     "react-native-screens": "^1.0.0-alpha.23",
     "react-native-vector-icons": "^6.6.0",
     "react-native-video": "^5.0.2",
     "react-native-windows": "0.59.0-rc.3",
     "react-navigation": "^4.0.10",
-    "react-navigation-tabs": "^2.5.6",
+    "react-navigation-tabs": "^2.6.0",
     "reactxp": "2.0.0-rc.1"
   }
 }
