--- a/package.json
+++ b/package.json
@@ -20,44 +20,44 @@
     "lint": "eslint --config .eslintrc --ext .ts,.tsx src"
   },
   "devDependencies": {
-    "@babel/core": "7.7.4",
-    "@babel/plugin-proposal-decorators": "7.7.4",
-    "@babel/preset-env": "7.7.4",
+    "@babel/core": "7.8.6",
+    "@babel/plugin-proposal-decorators": "7.8.3",
+    "@babel/preset-env": "7.8.6",
     "@react-native-community/cli": "1.11.2",
     "@types/cheerio": "^0.22.14",
-    "@types/enzyme": "3.10.3",
-    "@types/jest": "24.0.23",
+    "@types/enzyme": "3.10.5",
+    "@types/jest": "25.1.3",
     "@types/react-native-vector-icons": "^6.4.4",
     "@types/react-native-video": "^3.1.5",
     "@types/react-navigation": "^3.4.0",
-    "@typescript-eslint/eslint-plugin": "2.8.0",
-    "@typescript-eslint/parser": "2.8.0",
+    "@typescript-eslint/eslint-plugin": "2.21.0",
+    "@typescript-eslint/parser": "2.21.0",
     "babel-loader": "8.0.6",
-    "compression-webpack-plugin": "3.0.0",
-    "cross-env": "6.0.3",
-    "enzyme": "3.10.0",
-    "enzyme-adapter-react-16": "1.15.1",
-    "enzyme-to-json": "3.4.3",
-    "eslint": "6.7.0",
-    "eslint-loader": "3.0.2",
-    "eslint-plugin-jest": "23.0.4",
-    "eslint-plugin-react": "7.16.0",
-    "eslint-plugin-reactxp": "0.1.7",
-    "fork-ts-checker-webpack-plugin": "3.1.0",
+    "compression-webpack-plugin": "3.1.0",
+    "cross-env": "7.0.0",
+    "enzyme": "3.11.0",
+    "enzyme-adapter-react-16": "1.15.2",
+    "enzyme-to-json": "3.4.4",
+    "eslint": "6.8.0",
+    "eslint-loader": "3.0.3",
+    "eslint-plugin-jest": "23.8.1",
+    "eslint-plugin-react": "7.18.3",
+    "eslint-plugin-reactxp": "0.1.8",
+    "fork-ts-checker-webpack-plugin": "4.0.5",
     "html-webpack-plugin": "3.2.0",
-    "jest": "24.9.0",
-    "metro-react-native-babel-preset": "0.57.0",
-    "rnpm-plugin-windows": "0.3.8",
-    "typescript": "3.7.2",
-    "webpack": "4.41.2",
-    "webpack-cli": "3.3.10",
-    "webpack-dev-server": "3.9.0",
+    "jest": "25.1.0",
+    "metro-react-native-babel-preset": "0.58.0",
+    "rnpm-plugin-windows": "0.4.1",
+    "typescript": "3.8.3",
+    "webpack": "4.41.6",
+    "webpack-cli": "3.3.11",
+    "webpack-dev-server": "3.10.3",
     "webpack-merge": "4.2.2"
   },
   "dependencies": {
     "cheerio": "0.22.0",
-    "react": "16.12.0",
-    "react-dom": "16.12.0",
+    "react": "16.13.0",
+    "react-dom": "16.13.0",
     "react-native": "0.59.10",
     "react-native-gesture-handler": "~1.4.0",
     "react-native-music-control": "^0.10.7",
@@ -68,6 +68,6 @@
     "react-native-windows": "0.59.0-rc.3",
     "react-navigation": "^4.0.10",
     "react-navigation-tabs": "^2.6.0",
-    "reactxp": "2.0.0-rc.1"
+    "reactxp": "2.0.0"
   }
 }
