--- a/package.json
+++ b/package.json
@@ -29,7 +29,6 @@
     "@types/jest": "25.1.3",
     "@types/react-native-vector-icons": "^6.4.4",
     "@types/react-native-video": "^3.1.5",
-    "@types/react-navigation": "^3.4.0",
     "@typescript-eslint/eslint-plugin": "2.21.0",
     "@typescript-eslint/parser": "2.21.0",
     "babel-loader": "8.0.6",
@@ -55,6 +54,8 @@
     "webpack-merge": "4.2.2"
   },
   "dependencies": {
+    "@react-navigation/material-top-tabs": "^5.2.2",
+    "@react-navigation/native": "^5.3.0",
     "cheerio": "0.22.0",
     "react": "16.13.0",
     "react-dom": "16.13.0",
@@ -63,11 +64,10 @@
     "react-native-music-control": "^0.10.7",
     "react-native-reanimated": "^1.4.0",
     "react-native-screens": "^1.0.0-alpha.23",
+    "react-native-tab-view": "2.11.0",
     "react-native-vector-icons": "^6.6.0",
     "react-native-video": "^5.0.2",
     "react-native-windows": "0.59.0-rc.3",
-    "react-navigation": "^4.0.10",
-    "react-navigation-tabs": "^2.6.0",
     "reactxp": "2.0.0"
   }
 }
