--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "build:types": "tsc --emitDeclarationOnly",
     "type-check": "tsc --noEmit",
     "type-check:watch": "yarn type-check -w",
-    "lint": "eslint --config .eslintrc --ext .ts,.tsx src"
+    "lint": "eslint --config .eslintrc --ext .ts,.tsx src",
+    "rnlink": "react-native link"
   },
   "devDependencies": {
     "@babel/core": "7.8.6",
