Migrate to react-native-track-player

--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "react-native-safe-area-context": "4.4.1",
     "react-native-screens": "~3.18.0",
     "react-native-tab-view": "^3.3.0",
+    "react-native-track-player": "^3.2.0",
     "react-native-web": "~0.18.9",
     "expo-build-properties": "~0.4.1",
     "expo-splash-screen": "~0.17.5"
