--- a/src/radio.config.json
+++ b/src/radio.config.json
@@ -1,5 +1,7 @@
 {
   "radioName": "My Radio",
+  "radioNameLong": "My Radio Long Name",
+  "radioIcon": "https://myradio.com/icon.png",
   "radioUrl": "http://relay.publicdomainproject.org:80/classical.mp3",
   "dataUrl": "http://centova.example.com:8080/external/rpc.php",
   "articlesUrl": "blog/",
