--- a/package.json
+++ b/package.json
@@ -20,19 +20,20 @@
     "@react-navigation/native": "^6.0.14",
     "cheerio": "^0.22.0",
     "events": "^3.3.0",
-    "expo": "~47.0.9",
+    "expo": "~47.0.14",
+    "expo-build-properties": "~0.4.1",
+    "expo-dev-client": "~2.0.1",
     "expo-linking": "~3.2.3",
+    "expo-splash-screen": "~0.17.5",
     "expo-status-bar": "~1.4.2",
     "react": "18.1.0",
     "react-dom": "18.1.0",
-    "react-native": "0.70.5",
+    "react-native": "0.70.8",
     "react-native-pager-view": "6.0.1",
     "react-native-safe-area-context": "4.4.1",
     "react-native-screens": "~3.18.0",
     "react-native-tab-view": "^3.3.0",
     "react-native-track-player": "^3.2.0",
-    "react-native-web": "~0.18.9",
-    "expo-build-properties": "~0.4.1",
-    "expo-splash-screen": "~0.17.5"
+    "react-native-web": "~0.18.9"
   }
 }
