--- a/package.json
+++ b/package.json
@@ -9,31 +9,31 @@
     "web": "expo start --web"
   },
   "devDependencies": {
-    "@babel/core": "^7.12.9",
+    "@babel/core": "^7.24.0",
     "@types/cheerio": "^0.22.31",
-    "@types/react": "~18.0.14",
-    "@types/react-native": "~0.70.6",
-    "typescript": "^4.6.3"
+    "@types/react": "~18.2.79",
+    "@types/react-native": "^0.73.0",
+    "typescript": "~5.3.3"
   },
   "dependencies": {
     "@react-navigation/material-top-tabs": "^6.3.1",
     "@react-navigation/native": "^6.0.14",
     "cheerio": "^0.22.0",
     "events": "^3.3.0",
-    "expo": "~47.0.14",
-    "expo-build-properties": "~0.4.1",
-    "expo-dev-client": "~2.0.1",
-    "expo-linking": "~3.2.3",
-    "expo-splash-screen": "~0.17.5",
-    "expo-status-bar": "~1.4.2",
-    "react": "18.1.0",
-    "react-dom": "18.1.0",
-    "react-native": "0.70.8",
-    "react-native-pager-view": "6.0.1",
-    "react-native-safe-area-context": "4.4.1",
-    "react-native-screens": "~3.18.0",
+    "expo": "^51.0.24",
+    "expo-build-properties": "~0.12.4",
+    "expo-dev-client": "~4.0.21",
+    "expo-linking": "~6.3.1",
+    "expo-splash-screen": "~0.27.5",
+    "expo-status-bar": "~1.12.1",
+    "react": "18.2.0",
+    "react-dom": "18.2.0",
+    "react-native": "0.74.3",
+    "react-native-pager-view": "6.3.0",
+    "react-native-safe-area-context": "4.10.5",
+    "react-native-screens": "3.31.1",
     "react-native-tab-view": "^3.3.0",
     "react-native-track-player": "^4.1.1",
-    "react-native-web": "~0.18.9"
+    "react-native-web": "~0.19.10"
   }
 }
