--- a/package.json
+++ b/package.json
@@ -24,10 +24,13 @@
     "expo-build-properties": "~0.12.4",
     "expo-dev-client": "~4.0.21",
     "expo-linking": "~6.3.1",
+    "expo-localization": "~15.0.3",
     "expo-splash-screen": "~0.27.5",
     "expo-status-bar": "~1.12.1",
+    "i18next": "^23.12.2",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-i18next": "^15.0.0",
     "react-native": "0.74.3",
     "react-native-pager-view": "6.3.0",
     "react-native-safe-area-context": "4.10.5",
