--- a/app.json
+++ b/app.json
@@ -39,7 +39,7 @@
         "expo-build-properties",
         {
           "android": {
-            "compileSdkVersion": 33
+            "targetSdkVersion": 34
           }
         }
       ]
