--- a/package.json
+++ b/package.json
@@ -20,9 +20,9 @@
     "@react-navigation/native": "^6.0.14",
     "cheerio": "^0.22.0",
     "events": "^3.3.0",
-    "expo": "^51.0.24",
-    "expo-build-properties": "~0.12.4",
-    "expo-dev-client": "~4.0.21",
+    "expo": "~51.0.26",
+    "expo-build-properties": "~0.12.5",
+    "expo-dev-client": "~4.0.22",
     "expo-linking": "~6.3.1",
     "expo-localization": "~15.0.3",
     "expo-splash-screen": "~0.27.5",
@@ -31,7 +31,7 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-i18next": "^15.0.0",
-    "react-native": "0.74.3",
+    "react-native": "0.74.5",
     "react-native-pager-view": "6.3.0",
     "react-native-safe-area-context": "4.10.5",
     "react-native-screens": "3.31.1",
