--- a/app.json
+++ b/app.json
@@ -19,7 +19,9 @@
     ],
     "ios": {
       "supportsTablet": true,
-      "bundleIdentifier": "radio.stream.player",
+      "runtimeVersion":{
+        "policy": "appVersion"
+      },
       "infoPlist": {
         "UIBackgroundModes": ["audio"]
       }
