--- a/package.json
+++ b/package.json
@@ -6,7 +6,10 @@
     "start": "expo start --dev-client",
     "android": "expo run:android",
     "ios": "expo run:ios",
-    "web": "expo start --web"
+    "web": "expo start --web",
+    "build:android:development:local": "eas build --local --profile development --platform android",
+    "build:android:preview:local": "eas build --local --profile preview --platform android",
+    "build:ios:preview": "eas build --profile preview --platform ios"
   },
   "devDependencies": {
     "@babel/core": "^7.24.0",
@@ -20,12 +23,12 @@
     "@react-navigation/native": "^6.0.14",
     "cheerio": "^0.22.0",
     "events": "^3.3.0",
-    "expo": "~51.0.26",
+    "expo": "~51.0.36",
     "expo-build-properties": "~0.12.5",
-    "expo-dev-client": "~4.0.22",
+    "expo-dev-client": "~4.0.27",
     "expo-linking": "~6.3.1",
     "expo-localization": "~15.0.3",
-    "expo-splash-screen": "~0.27.5",
+    "expo-splash-screen": "~0.27.6",
     "expo-status-bar": "~1.12.1",
     "i18next": "^23.12.2",
     "react": "18.2.0",
